--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,18 +14,20 @@ body{
     text-align: center;
     height: 100vh;
     display: grid;
-    place-items: center;
+    place-content: center;
     color: #fff;
     background-color: #222;
 }
 
 section{
-    max-width: 300px;
-    max-height: 300px;
+    display: grid;
+    place-items: center;
+    gap: 2rem;
 }
 
 img{
-    width: 100%;
+    max-width: 320px;
+    height: auto;
 }
 
 
